# irclog2json

./: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README.md  basic_irc_log_parser.cpp  basic_irc_log_parser.h  compile_flags.txt  converter.cpp  converter.h  file_name_manager.cpp  file_name_manager.h  irc_log_parser.h  irclog2json.cpp  madoka_log_parser.cpp  madoka_log_parser.h  make_unique.h  options.h  tiarra2json.cpp
.github/workflows/: main.yaml
message/: basic_message.cpp  basic_message.h  factory.cpp  factory.h  iso_2022_jp_line_converter.cpp  iso_2022_jp_line_converter.h  iso_2022_jp_line_parser.cpp  iso_2022_jp_line_parser.h  join.cpp  join.h  kick.cpp  kick.h  line_converter.h  line_converter_base.cpp  line_converter_base.h  line_converter_re.h  line_parser.h  line_parser_re.h  madoka_auto_down.cpp  madoka_auto_down.h  madoka_iso_2022_jp_line_converter.cpp  madoka_iso_2022_jp_line_converter.h  madoka_iso_2022_jp_line_parser.cpp  madoka_iso_2022_jp_line_parser.h  madoka_line_converter.cpp  madoka_line_converter.h  madoka_line_parser.cpp  madoka_line_parser.h  madoka_log_line_converter.cpp  madoka_log_line_converter.h  madoka_re.cpp  madoka_re.h  message_base.cpp  message_base.h  nick.cpp  nick.h  notice.cpp  notice.h  part.cpp  part.h  (+22 more)
tests/: CMakeLists.txt  compile_flags.txt  file_system_manager_test.cpp  test_helper.h  tiarra_messages.cpp
tests/madoka/: auto_down.cpp  auto_down_nick_set.cpp  join.cpp  kick.cpp  mode.cpp  nick.cpp  notice.cpp  part.cpp  privmsg.cpp  quit.cpp  time_tone.cpp  topic.cpp
tests/madoka_iso-2022-jp/: kick.cpp  kick.txt  part.cpp  part.txt  privmsg.cpp  privmsg.txt  quit.cpp  quit.txt  quit_unquoted.txt  time_tone.cpp  topic.cpp  topic.txt
tests/tiarra/: join.cpp  kick.cpp  mode.cpp  nick.cpp  notice.cpp  part.cpp  privmsg.cpp  quit.cpp  topic.cpp
